test/expected/using_aui.out
using AI = auto int
           ^
12: error: "auto" illegal in type definition
